--- a/folder/inner/index.html
+++ b/folder/inner/index.html
@@ -10,7 +10,7 @@
 <body>
   <h1>Мемы про котиков, айти и котиков в айти</h1>
   <img src="/img/img1.jpg" alt="Абсолютно няшный кот">
-  <img src="../../img/img2.png" alt="Относительно няшная кошка" width="480px">
+  <img src="../img/img2.png" alt="Относительно няшная кошка" width="480px">
   <p>new memes soon...</p>
 </body>
 </html>
